--- a/docs/get-started/registrations/fundmangers.mdx
+++ b/docs/get-started/registrations/fundmangers.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 ---
 
+import Image from '@site/src/components/Image';
+
 # Fund Managers Registration
 
 Venture360 offers a seamless user registration process for investors to access the platform and engage with investment opportunities. Follow these steps to get started:
@@ -9,7 +11,9 @@ Venture360 offers a seamless user registration process for investors to access t
 ## Step 1: Invitation Email
 
 - Fund managers will receive an email after talking to a an exper at sales at [Venture360](https://www.venture360.co/fund-management).
-  ![alt text](../images/image.png)
+  <!-- ![alt text](../images/image.png) -->
+
+  <Image src='docs/Screenshot10.png' />
 
 ## Step 2: Account Creation
 
